src_old/objects/Reservation__c.object
<CustomObject>
    <fields>
        <fullName>AutoApprovalComment__c</fullName>
        <description>Auto Approval Comment</description>
        <label>Auto Approval Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CancelReasonComment__c</fullName>
        <description>Cancel Reason Comment</description>
        <label>CancelReasonComment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CancelReason__c</fullName>
        <description>Reservation Cancel reasons</description>
        <label>CancelReason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Reduced Budget</fullName>
                </value>
                <value>
                    <fullName>Insufficient Funds</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DateRequestSubmitted__c</fullName>
        <label>Request Submit Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ExpirationDate__c</fullName>
        <description>Expiration date defines a date where the Reservation will be moved to the Expired status if it has not move to the reserved state.</description>
        <inlineHelpText>This date defines when the reservation will automatically expire if the reservation doesn&apos;t get approved/reserved.</inlineHelpText>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IsAutoApproved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Auto-Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsCapacityOverridden__c</fullName>
        <formula>NumberofOverriddenReservedLocations__c &gt; 0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Capacity Overridden</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Isexpirable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Auto-expire will only happen when flag is checked</description>
        <label>Is expirable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NumberofOverriddenReservedLocations__c</fullName>
        <label>Number of Overridden Reserved Locations</label>
        <summaryFilterItems>
            <field>ReservationLocation__c.CapacityOverride__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>ReservationLocation__c.Reservation__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NumberofReservedLocations__c</fullName>
        <label>Number of Reserved Locations</label>
        <summaryFilterItems>
            <field>ReservationLocation__c.Status__c</field>
            <operation>equals</operation>
            <value>Reserved</value>
        </summaryFilterItems>
        <summaryForeignKey>ReservationLocation__c.Reservation__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>PendingExpirationNotified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pending Expiration Notified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PrimaryAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The primary account that is responsible for the reservation.</description>
        <inlineHelpText>The primary account that is responsible for the reservation.</inlineHelpText>
        <label>Primary Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Reservations</relationshipLabel>
        <relationshipName>Reservations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PrimaryOpportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Reservations</relationshipLabel>
        <relationshipName>Reservations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Reservations</relationshipLabel>
        <relationshipName>Reservations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RequestPending__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Request Pending</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RequestStatus__c</fullName>
        <label>Request Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending Reservation</fullName>
                </value>
                <value>
                    <fullName>Pending Cancellation</fullName>
                </value>
                <value>
                    <fullName>Pending Expiration</fullName>
                </value>
                <value>
                    <fullName>Pending UnReserve</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RequestedDate__c</fullName>
        <label>Requested Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RequestedLocations__c</fullName>
        <description>The quantity of locations at which that the client has requested to do the event</description>
        <inlineHelpText>The quantity of locations at which that the client has requested to do the event</inlineHelpText>
        <label>Requested Locations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RetailerAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Retailer Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Reservations (Retailer Account)</relationshipLabel>
        <relationshipName>Reservations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The service that is being reserved.</description>
        <inlineHelpText>The service that is being reserved.</inlineHelpText>
        <label>Service</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Choose a product that has a valid OH Service template mapped.</errorMessage>
            <filterItems>
                <field>Product2.Service__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>Product2.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Reservations</relationshipLabel>
        <relationshipName>Reservations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <defaultValue>&apos;Draft&apos;</defaultValue>
        <description>Status of the reservation</description>
        <inlineHelpText>Status of the Reservation.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Reserved</fullName>
                    <label>Booked</label>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Reservation</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Reservation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Reservations</pluralLabel>
    <recordTypes>
        <fullName>PendingApproval</fullName>
        <active>true</active>
        <description>Pending Approval</description>
        <label>Pending Approval</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Disallow_Product_change_after_locations</fullName>
        <active>true</active>
        <description>Do not allow a product to be changed after adding reservation locations</description>
        <errorConditionFormula>AND (ISCHANGED( Service__c ), NumberofReservedLocations__c &gt; 0)</errorConditionFormula>
        <errorMessage>Cannot change service (product), after adding reservation locations. Remove all locations and retry.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Disallow_booked_with_0locations</fullName>
        <active>true</active>
        <description>At least one location must be reserved before a reservation can be approved/booked.</description>
        <errorConditionFormula>AND(ISCHANGED(Status__c), OR(TEXT(Status__c) == &apos;Pending Approval&apos;,TEXT(Status__c) == &apos;Approved&apos;, TEXT(Status__c) == &apos;Reserved&apos; ), NumberofReservedLocations__c == 0)</errorConditionFormula>
        <errorMessage>At least one location should be reserved before a reservation can be submitted for approval or booked.</errorMessage>
    </validationRules>
</CustomObject>